--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=450" initial-scale=1.0 />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta name="theme-color" content="#000000" />
     <meta
       name="PhoneBook"
